mv _includes, rm .nojekyll

--- a/includes/in_header.html
+++ b/includes/in_header.html
@@ -1,8 +1,8 @@
 
 <!-- toc: table of contents -->
-<link href="_includes/libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet">
-<script src="_includes/libs/tocify-1.9.1/jquery-ui-1.9.2.custom.min.js"></script>
-<script src="_includes/libs/tocify-1.9.1/jquery.tocify.min.js"></script>
+<link href="includes/libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet">
+<script src="includes/libs/tocify-1.9.1/jquery-ui-1.9.2.custom.min.js"></script>
+<script src="includes/libs/tocify-1.9.1/jquery.tocify.min.js"></script>
 
 <!-- Custom Fonts for agency.css eco-data-science -->
 <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
